# mss-datasets

./: .env.example  .gitignore  LICENSE  README.md  config.example.yaml  pyproject.toml  spec.md
docs/: medleydb_exclusions.md
src/mss_aggregate/: __init__.py  audio.py  cli.py  download.py  overlap.py  pipeline.py  splits.py
src/mss_aggregate/datasets/: base.py  medleydb.py  moisesdb_adapter.py  musdb18hq.py
src/mss_aggregate/mapping/: __init__.py  medleydb_instruments.yaml
src/mss_datasets/: __init__.py  cli.py  download.py  metadata.py  overlap.py  pipeline.py  splits.py  utils.py
src/mss_datasets/datasets/: base.py  medleydb.py  moisesdb_adapter.py  musdb18hq.py
src/mss_datasets/mapping/: __init__.py  medleydb_instruments.yaml  medleydb_overrides.yaml  profiles.py
tests/: conftest.py  test_audio.py  test_cli.py  test_download.py  test_integration.py  test_mapping.py  test_medleydb.py  test_metadata.py  test_moisesdb.py  test_musdb18hq.py  test_overlap.py  test_parallel.py  test_pipeline.py  test_splits.py  test_utils.py
